--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -33,3 +33,24 @@
         display: none;
     }
 }
+
+/* 
+    =============================
+    ONZE EIGEN CSS KOMT HIERONDER
+    =============================
+*/
+
+nav {
+    background: rgb(240, 147, 43);
+    color: white;
+}
+
+.navbar-inverse {
+    background: rgb(240, 147, 43);
+    color: white;
+}
+
+.centeralign {
+    text-align: center;
+    margin-bottom: 20px;
+}
