SessieRepo methodes in kommentaar aangezien domein changes

--- a/BreakOutBox/Views/Sessie/GeefSessieCode.cshtml
+++ b/BreakOutBox/Views/Sessie/GeefSessieCode.cshtml
@@ -20,7 +20,7 @@
 
 
         <div>
-            <button asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="" type="submit" >GO!</button>
+            <button asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="aaa" type="submit" >GO!</button>
         </div>
     </form>
 
