SessieController (opvragen sessie code + opvragen sessie + validatie)

--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -1,7 +1,4 @@
 ﻿
-@{
-    ViewData["Title"] = "SessieOverzicht";
-}
-
-<h2>SessieOverzicht</h2>
+<h1>id doorgegeven:</h1>
+<h2>@ViewData["code"]</h2>
 
