--- a/BreakOutBox/Views/Sessie/Index.cshtml
+++ b/BreakOutBox/Views/Sessie/Index.cshtml
@@ -1,1 +1,26 @@
-﻿
+﻿@model BreakOutBox.Models.SessieViewModels.IndexViewModel
+
+
+<form method="post">
+
+    <div class="form-group">
+        <br />
+        <label class="text-danger">@ViewData["BestaatNietError"]</label><br />
+
+        <label asp-for="SessieCode"></label>
+        <input asp-for="SessieCode" type="text" onchange="this.form.submit()" class="form-control" />
+        <span asp-validation-for="SessieCode" class="text-danger"></span>
+
+    </div>
+    <div>
+
+        <a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a>
+    </div>
+</form>
+
+
+@section scripts {
+
+    <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+}
