Add Title to landing page

--- a/BreakOutBox/Views/Sessie/Index.cshtml
+++ b/BreakOutBox/Views/Sessie/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BreakOutBox.Models.SessieViewModels.IndexViewModel
 @{
     Layout = null;
+    ViewData["Title"] = "Welcome";
 }
 
 <!DOCTYPE html>
