--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -6,19 +6,30 @@
     <title>@ViewData["Title"] - BreakOutBox</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
         <link href="~/css/paper.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        @*<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+            asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+            asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
         <link href="~/css/paper.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
 <body>
+    <div id="top" class="container row site">
+        <div id="landing" class="sm-12 md-12 col">
+            
+                <nav class="row">
+                    <ul>
+                        <li><a asp-area="" asp-controller="Sessie" asp-action="Index">Deelnemen aan sessie</a></li>
+                        <li><a asp-area="" asp-controller="Sessie" asp-action="Index">Aanmelden (leerkracht)</a></li>
+                    </ul>
+                </nav>
+        </div>
+    </div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
