--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -1,6 +1,6 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    /*padding-top: 50px;
+    padding-bottom: 20px;*/
 }
 
 /* Wrapping element */
@@ -53,23 +53,28 @@ body {
     background: #D41872;
 }
 
-.navbar-inverse {
-    background-color: none;
-    border-color: none;
-}
-
 a {
     color: white;
-}
-
-.centeralign {
-    text-align: center;
-    margin-bottom: 20px;
 }
 
 #landing, #landing a, #landing a:hover, #landing a:visited, #landing a:active, #landing .text-danger {
     color: white;
 }
-#landing input {
+
+    #landing input {
+        display: inline-block;
+    }
+
+nav ul li, nav ul {
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-indent: 0px;
+}
+
+nav ul li, nav ul li::before {
     display: inline-block;
+    content: none;
+
 }
