Add SpelController & SpelOversicht(view)

--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -16,5 +16,9 @@
             <li>@(leerling.Voornaam + leerling.Achternaam)</li>
         }
     </ul>
+
+    
 </div>
 }
+
+<a asp-action="SpelOverzicht">Test</a>
