--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -3,18 +3,23 @@
     ViewData["Title"] = "Sessie";
 }
 
-<h1>@Model.Omschrijving</h1>
-
-<br />
-@foreach (var groep in Model.Groepen)
-{
-<div class="sm-12 md-6 col">
-    <h2 class="col-6">Groep @(groep.GroepId)</h2>
-    <ul>
-        @foreach (var leerling in groep.Leerlingen)
-        {
-            <li>@(leerling.Voornaam + leerling.Achternaam)</li>
-        }
-    </ul>
+<div class="row">
+    <div class="col-12 col">
+        <h2>Sessie: @Model.Omschrijving</h2>
+    </div>
 </div>
-}
+
+<div class="row">
+    @foreach (var groep in Model.Groepen)
+    {
+        <div class="sm-12 md-6 col">
+            <h4>Groep @(groep.GroepId)</h4>
+            <ul>
+                @foreach (var leerling in groep.Leerlingen)
+                {
+                    <li>@(leerling.Voornaam + leerling.Achternaam)</li>
+                }
+            </ul>
+        </div>
+    }
+</div>
