--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -2,24 +2,37 @@
 @{
  
 }
+<head>
+    
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+</head>
 
-<div class="row">
-    <div class="col-12 col">
-        <h2>Sessie: @Model.Omschrijving</h2>
-    </div>
-</div>
-
-<div class="row">
-    @foreach (var groep in Model.Groepen)
-    {
-        <div class="sm-12 md-6 col">
-            <h4>Groep @(groep.GroepId)</h4>
-            <ul>
-                @foreach (var leerling in groep.Leerlingen)
-                {
-                    <li>@(leerling.Voornaam + leerling.Achternaam)</li>
-                }
-            </ul>
-        </div>
+<style>
+    .fas fa-times{
+        color:red;
     }
-</div>
+</style>
+
+<body>
+    <div class="row">
+        <div class="col-12 col">
+            <h2>Sessie: @Model.Omschrijving</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        @foreach (var groep in Model.Groepen)
+        {
+            <div class="sm-12 md-6 col">
+                <h4>Groep @(groep.GroepId)<i class="fas fa-times" style="color:#ff2121;margin-left:10px"></i>@*<i class="fas fa-check" style="margin-left:10px;color:lightgreen"></i>*@</h4>
+                <ul>
+                    @foreach (var leerling in groep.Leerlingen)
+                    {
+                        <li>@(leerling.Voornaam + leerling.Achternaam)</li>
+                    }
+                </ul>
+            </div>
+        }
+    </div>
+</body>
+
