SpelOverzicht (view) verder uitwerken

--- a/BreakOutBox/Views/Spel/SpelOverzicht.cshtml
+++ b/BreakOutBox/Views/Spel/SpelOverzicht.cshtml
@@ -1,4 +1,4 @@
-﻿@model BreakOutBox.Models.Domain.Sessie
+﻿@*@model BreakOutBox.Models.Domain.Sessie
 @{
     ViewData["Title"] = "SpelOverzicht";
 }
@@ -30,5 +30,5 @@
     }
 
 
-}
+}*@
 
