--- a/BreakOutBox/Views/Account/Login.cshtml
+++ b/BreakOutBox/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Aanmelden</button>
+                    <button asp-controller="Leerkracht" asp-action="Index" type="submit" class="btn btn-default">Aanmelden</button>
                 </div>
                 <div class="form-group">
                     <p>
