Link elke groep voor ToonPad

--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -19,6 +19,11 @@
                 {
                     <li>@(leerling.Voornaam + leerling.Achternaam)</li>
                 }
+                <li>
+                    <a asp-controller="Sessie" asp-action="ToonPad" asp-route-id="@groep.GroepId">
+                        <i class="fas fa-angle-double-right"></i> Klik hier als dit jouw groep is
+                    </a>
+                </li>
             </ul>
         </div>
     }
