--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -15,10 +15,11 @@
             asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
             asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
         <link href="https://unpkg.com/papercss@1.4.1/dist/paper.min.css" rel="stylesheet"
-            asp-fallback-href="~/lib/paper/paper.css"
-            asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+              asp-fallback-href="~/lib/paper/paper.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
     <div id="top" class="container row site">
