Implement States and Fix Sessiecode check new view

--- a/BreakOutBox/Views/Sessie/Index.cshtml
+++ b/BreakOutBox/Views/Sessie/Index.cshtml
@@ -43,10 +43,10 @@
                         <form method="post">
                             <p><label asp-for="SessieCode"></label></p>
                             <p><input asp-for="SessieCode" type="text" class="form-control" /></p>
-                            @*<p><span asp-validation-for="SessieCode" class="text-danger"></span></p>*@
+                            <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
+                            <p>@TempData["message"]</p>
                             @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
                             <p><button type="submit" class="">Ga verder</button></p>
-                            <p>@ViewData["BestaatNietError"]</p>
                         </form>
                     </div>
                 </div>
