--- a/BreakOutBox/Views/Sessie/SpelOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SpelOverzicht.cshtml
@@ -8,41 +8,19 @@
 <br />
 
 
-<h4>Groep </h4>
+<h4>@TempData["message"]</h4>
 
 <p>Opdracht 1</p>
 
 <p>Test</p>
 
 <div>
-    <label>Antwoord</label>
+    <label>Toeganscode</label>
     <input class="form-control" data-val-required="Gelieve een antwoord te geven" />
+
     <button type="submit" class="btn btn-default">Submit</button>
 
 </div>
-
-
-
-@*@foreach (var groep in Model.Groepen)
-    {
-
-
-
-
-        @foreach (var oefening in Model.Box.Oefeningen)
-        {<div class="sm-12 md-6 col">
-
-                <ul>
-                    <li>
-                        @(oefening.Opgave)
-
-                        <input type="submit" value="Antwoord" class="btn btn-primary" />
-                    </li>
-                </ul>
-            </div>
-
-        }
-    }*@
 
 
 
