--- a/BreakOutBox/Views/Sessie/Index.cshtml
+++ b/BreakOutBox/Views/Sessie/Index.cshtml
@@ -42,7 +42,7 @@
                         <h1>Break Out Box</h1>
                         <form method="post">
                             <p><label asp-for="SessieCode"></label></p>
-                            <p><input asp-for="SessieCode" type="text" class="form-control" /></p>
+                            <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" /></p>
                             <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
                             <p>@TempData["message"]</p>
                             @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
