--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -61,3 +61,5 @@
         <p>@TempData["message"]</p>
     </div>
 </div>
+
+<a asp-controller="Spel" asp-action="SpelSpelen">Simuleer leerkracht start sessie</a>
