Spelcontroller + view implementeren

--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -16,7 +16,7 @@
                         <div>
 
                             <div id="pdf">
-                                <object width="600" height="750" type="application/pdf" data="~/OpdhrachtenG1/opdracht1G1.pdf" id="pdf_content">
+                                <object width="600" height="750" type="application/pdf" data="~/OpdhrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content">
                                     <p>Insert your error message here, if the PDF cannot be displayed.</p>
                                 </object>
                             </div>
