--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     @foreach (var groep in Model.Groepen)
     {
-        <div class="sm-12 md-6 col">
+        <div class="sm-12 md-6 col groep">
             <h4>Groep @(groep.GroepId)</h4>
             <ul>
                 @foreach (var leerling in groep.Leerlingen)
