--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -22,12 +22,16 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
-    <div id="top" class="container row site">
-        <nav id="landing" class="sm-12 col">
-            <ul>
-                @await Html.PartialAsync("_LoginPartial")
-            </ul>
-        </nav>
+    <div class="bgcolorwhite">
+        <div class="container">
+            <div class="row nav">
+                <nav id="navigatie" class="sm-12 col inputinline">
+                    <ul>
+                        @await Html.PartialAsync("_LoginPartial")
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </div>
     <div class="container">
         @RenderBody()
