--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -50,22 +50,32 @@ body {
     background-attachment: fixed;
     /* 072 Spiky Naga www.webgradients.com */
     /*background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);*/
-    background: #8c545c;
-    color: white;
+    background: rgba(0,0,0,0.05);
+    color: #404040;
+    border-top: 10px solid #404040;
 }
 
-a, #landing, a, a:hover, a:visited, a:active, .text-danger {
+a, a, a:hover, a:visited, a:active, .text-danger {
     background-image: none;
-    color: white;
+    color: #404040;
 }
 
-#landing {
+#navigatie {
     padding-top: 0;
     padding-bottom: 0;
 }
 
-#landing input {
+.inputinline input {
     display: inline-block;
+}
+
+.nav {
+    margin-bottom: 0;
+}
+
+.bgcolorwhite {
+    background-color: white;
+    box-shadow: 0 8px 6px -6px lightgrey;
 }
 
 ul li, ul {
@@ -117,6 +127,11 @@ footer {
 }
 
 input, select, button, textarea {
-    border: 2px solid white;
-    color: white;
+    border: 2px solid #404040;
+    color: #404040;
+}
+
+.groep:hover {
+    box-shadow: 0 10px 20px -6px lightgrey;
+    border: 3px solid lightgrey;
 }
