--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -22,15 +22,23 @@
                             </div>
 
                             
+                            
 
                         </div>
                         <p><label asp-for="Toegangscode"></label></p>
                         <p><input id="Toegangscode" asp-for="Toegangscode" type="text" class="form-control" autocomplete="off" value="" /></p>
                         <p><span asp-validation-for="Toegangscode" class="text-danger"></span></p>
                         
+                        
                         <p>@TempData["FouteCode"]</p>
                         @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
                         <p><button type="submit" class="">Ga verder</button></p>
+
+                        @if(Model.TellerFouteToegangscode == 3){ 
+                            <div>
+                                <p><button type="button">Feedback</button></p>
+                            </div>
+                        }
 
                         <div hidden>
                             <p><input asp-for="OpdrachtId" type="text" class="form-control" autocomplete="off" value="@Model.Opdracht.OpdrachtId"/></p>
