--- a/BreakOutBox/Views/Account/Login.cshtml
+++ b/BreakOutBox/Views/Account/Login.cshtml
@@ -10,12 +10,15 @@
 }
 
 <div class="row">
-    <div class="sm-12 col">
+    <div class="col-12 col">
         <h2>@ViewData["Title"]</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="sm-12 col">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 @*<h4>Use a local account to log in.</h4>*@
-                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
@@ -34,6 +37,7 @@
                         </label>
                     </div>
                 </div>
+                <div asp-validation-summary="All" class="text-danger"></div><br>
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Aanmelden</button>
                 </div>
@@ -42,8 +46,8 @@
                         <a asp-action="ForgotPassword">Wachtwoord vergeten?</a>
                     </p>
                     @*<p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Als leerkracht registreren?</a>
-                    </p>*@
+                <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Als leerkracht registreren?</a>
+            </p>*@
                 </div>
             </form>
         </section>
