--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="row">
-    <div class="col-12 col">
+    <div class="col-12 col text-center">
         <h2>Sessie: @Model.Omschrijving</h2>
     </div>
 </div>
@@ -13,7 +13,7 @@
     @foreach (var groep in Model.Groepen)
     {
         <div class="sm-12 md-6 col groep">
-            <h4>Groep @(groep.GroepId)</h4>
+            <h4><i class="fas fa-users fa-sm marginright"></i> Groep @(groep.GroepId)</h4>
             <ul>
                 @foreach (var leerling in groep.Leerlingen)
                 {
@@ -47,9 +47,8 @@
     }
 </div>
 <div class="row">
-    <div class="sm-12 col">
+    <div class="sm-12 col text-center">
         <p>@TempData["message"]</p>
+        <p><a asp-controller="Spel" asp-action="SpelSpelen">Simuleer leerkracht start sessie</a></p>
     </div>
 </div>
-
-<a asp-controller="Spel" asp-action="SpelSpelen">Simuleer leerkracht start sessie</a>
